# em-img-seg

./: Cargo.toml  LICENSE  README.md  setup.py
examples/: segment.py  segment_fully_rust.py
pure-python/: EM_Image_Segmentation.ipynb  em_seg.py
rustem/: __init__.py
src/: em.rs  imageio.rs  lib.rs
