[package]
name = "rustem"
version = "0.1.0"
authors = ["geoph9 <geoph9@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.13"

[dependencies.pyo3]
version = "0.13.1"
#default-features = false
features = ["extension-module"]

[lib]
crate-type = ["cdylib"]
name = "rustem"