[package]
name = "rustem"
version = "0.1.0"
authors = ["geoph9 <geoph9@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
progressive = "0.1"
image = "0.23.13"
ndarray = "0.14.0"
numpy = "0.13"
ndarray-image = "0.3.0"
ndarray-rand = "0.13.0"
ndarray-linalg = "0.12.1"
ndarray-stats = "0.4.0"
#rulinalg="0.4.2"

[dependencies.pyo3]
version = "0.13.1"
#default-features = false
features = ["extension-module"]

[lib]
crate-type = ["cdylib"]
name = "rustem"